fix: Rows not filling horizontal space
* Absolutely positioned elements are not in the
  normal document flow, so requires a fixed width
* Instead of trying to derive the max width, use
  a constant value and truncate with elilipsis

--- a/src/components/ExpandableRow/ExpandableRow.css
+++ b/src/components/ExpandableRow/ExpandableRow.css
@@ -1,5 +1,6 @@
 .logfile-table__row {
   position: absolute;
+  width: 100%;
   display: flex;
   border-bottom: 1px solid #ddd;
   font-family: monospace;
@@ -17,6 +18,11 @@
 
 .logfile-table__row__time-cell {
   min-width: 225px;
+}
+
+.logfile-table__row__event-cell {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .logfile-table__row__time-cell.expanded {
